--- a/index.html
+++ b/index.html
@@ -3,7 +3,5 @@
 <html>
 
   <head>
-    <h2>URN 6954012 </h2>
   </head>
-  
-</html>
+</imgsrc="WebBanner2023.png" alt+"Banner" width="1200" height="300">
