--- a/index.html
+++ b/index.html
@@ -4,4 +4,5 @@
 
   <head>
   </head>
-</imgsrc="WebBanner2023.png" alt+"Banner" width="1200" height="300">
+<img src="WebBanner2023.png" alt="Banner" width="1200" height="300">
+</html>
