--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <body>
     <img src="WebBanner2023.png" alt="Banner" width="1200" height="300">
+    <h1><b>ENG0018 Computer labatory 2025/26</b></h1>
+    <h2>Student URN: 6954012</h2>
     </body>
   </head>
 </html>
