--- a/index.html
+++ b/index.html
@@ -5,4 +5,7 @@
     <h1><b>ENG0018 Computer labatory 2025/26</b></h1>
     <h2>Student URN: 6954012</h2>
   </head>
+  <body>
+    
+  </body>
 </html>
