--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <h2>Student URN: 6954012</h2>
     <hr>
     <h2 style="font-family:calibri;"><b>Confrence paper: F1 aerodynamics </b></h2>
+    <h2 style="color:Blue;">
     <hr>
   </head>
   <body>
