--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <h1><b>ENG0018 Computer labatory 2025/26</b></h1>
     <h2>Student URN: 6954012</h2>
     <hr>
-    <h2 style="font-family:calibri;"><b>Confrence paper: F1 aerodynamics </b></h2>
+    <h2 style="font-family:calibri;"><b>Confrence paper: The influence of the rising technological advances on modern-day fighter jets and their effects on their efficiency in modern-day combat fields. </b></h2>
     <h2 style="color:Blue;">
     <hr>
   </head>
