--- a/index.html
+++ b/index.html
@@ -10,6 +10,34 @@
     <hr>
   </head>
   <body>
+    <!style for tables>
+    <style>
+      table{
+        font-family:arial, sans-serif;
+        border-collapse: collapse;
+        width: 30%;
+
+      }
+
+      td, th {
+        border: 1px solid #dddddd
+        text-align: left;
+        padding: 8px;
+      }
+
+      tr:nth-child(even) {
+        background-colour: #dddddd
+      }
+
+
+
+
+       </style>
     
+    <style>
+      p.ex1 {
+        margin-left: 250px;
+      }
+    </style>
   </body>
 </html>
