--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         margin-left: 250px;
       }
     </style>
-
+   </head>
 
     <meta name="viewport" content="width=device-width, inital-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -48,6 +48,17 @@
     </style>
     <body style="background-color:#FFFFFF;margin-left:50px;">
       <h3 id="Abstract">Abstract</h3>
+      <hr>
+      <h3 id="Abstract">Abstract</h3>
+    </p>
+      <p class="ex1">
+      <pre>
+        This experiment investigates the relationship between the independent and dependent variables,
+        highlighting the underlying physical principles and analysing the accuracy and reliability of the
+        results obtained.
+      </pre>
+
+
       <p class="ex1">
         <pre>
           “Active Learning (Angluin, 1988, Cohn et al., 1994) is a paradigm where a concept is learnt by an
