--- a/index.html
+++ b/index.html
@@ -1,64 +1,64 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <img src="WebBanner2023.png" alt="Banner" width="1200" height="300">
-    <h1><b>ENG0018 Computer labatory 2025/26</b></h1>
+
+    <h1><b>ENG0018 Computer laboratory 2025/26</b></h1>
     <h2>Student URN: 6954012</h2>
+
     <hr>
-    <h2 style="font-family:calibri;"><b>Confrence paper: The influence of the rising technological advances on modern-day fighter jets and their effects on their efficiency in modern-day combat fields</b></h2>
-    <h2 style="color:Blue;">
+
+    <h2 style="font-family:calibri;">
+        <b>Conference paper: The influence of the rising technological advances on modern-day fighter jets and their effects on their efficiency in modern-day combat fields</b>
+    </h2>
+
     <hr>
-  </head>
-  <body>
-    <!style for tables>
+
+    <!-- Styles -->
     <style>
-      table{
-        font-family:arial, sans-serif;
-        border-collapse: collapse;
-        width: 30%;
+        table {
+            font-family: arial, sans-serif;
+            border-collapse: collapse;
+            width: 30%;
+        }
 
-      }
+        td, th {
+            border: 1px solid #dddddd;
+            text-align: left;
+            padding: 8px;
+        }
 
-      td, th {
-        border: 1px solid #dddddd
-        text-align: left;
-        padding: 8px;
-      }
+        tr:nth-child(even) {
+            background-color: #dddddd;
+        }
 
-      tr:nth-child(even) {
-        background-colour: #dddddd
-      }
+        p.ex1 {
+            margin-left: 250px;
+        }
 
-
-
-
-       </style>
-    
-    <style>
-      p.ex1 {
-        margin-left: 250px;
-      }
+        .mySlides {
+            display: none;
+        }
     </style>
-   </head>
 
-    <meta name="viewport" content="width=device-width, inital-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <style>
-      .mySlides {display:none;}
-    </style>
-    <body style="background-color:#FFFFFF;margin-left:50px;">
+</head>
 
-      <p class="ex1">
-      <pre>
-        This experiment investigates the relationship between the independent and dependent variables,
-        highlighting the underlying physical principles and analysing the accuracy and reliability of the
-        results obtained.
-      </pre>
+<body style="background-color:#FFFFFF;margin-left:50px;">
 
-
-      <p class="ex1">
+    <p class="ex1">
         <pre>
-          “Active Learning (Angluin, 1988, Cohn et al., 1994) is a paradigm where a concept is learnt by an
+This experiment investigates the relationship between the independent and dependent variables,
+highlighting the underlying physical principles and analysing the accuracy and reliability of the
+results obtained.
+        </pre>
+    </p>
+
+    <p class="ex1">
+        <pre>
+“Active Learning (Angluin, 1988, Cohn et al., 1994) is a paradigm where a concept is learnt by an
 intelligent machine through the interaction of an oracle with the machine system, over a sequence of
 learning epochs. A distinctive component in an active system is the querying strategy, used to sample
 candidate training instances from a pool and evaluate them for informativeness, i.e., their potential
@@ -74,5 +74,6 @@ reaching a stage where information from the selected instances is contrary to th
 classifier confidence to drop, as in Vlachos (2008).
         </pre>
     </p>
-  </body>
+
+</body>
 </html>
