--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
 </head>
 
 <body style="background-color:#FFFFFF;margin-left:50px;">
+
+    <!-- ABSTRACT SECTION -->
     <hr>
-<h3 id="Abstract">Abstract</h3>
+    <h3 id="Abstract">Abstract</h3>
 
     <p class="ex1">
         <pre>
