--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <hr>
 
-    <!-- Styles -->
+    <!style for tables>
     <style>
         table {
             font-family: arial, sans-serif;
