--- a/index.html
+++ b/index.html
@@ -11,19 +11,20 @@
     <hr>
 
     <h2 style="font-family:calibri;">
-        <b>Conference paper: The influence of the rising technological advances on modern-day fighter jets and their effects on their efficiency in modern-day combat fields</b>
+        <b>Conference paper: The influence of the rising technological advances on modern-day fighter jets and their effects on their efficiency in modern combat fields</b>
     </h2>
 
     <hr>
 
-    <!-- TABLE OF CONTENTS -->
-<h2>Table of Contents</h2>
-<ul>
-    <li><a href="#Abstract">Abstract</a></li>
-</ul>
-<hr>
+    <!-- TABLE OF CONTENTS INSERTED HERE -->
+    <h2>Table of Contents</h2>
+    <ul>
+        <li><a href="#Abstract">Abstract</a></li>
+    </ul>
+    <hr>
+    <!-- END OF TABLE OF CONTENTS -->
 
-    <!style for tables>
+    <!-- Styles -->
     <style>
         table {
             font-family: arial, sans-serif;
@@ -56,7 +57,6 @@
 <body style="background-color:#FFFFFF;margin-left:50px;">
 
     <!-- ABSTRACT SECTION -->
-    <hr>
     <h3 id="Abstract">Abstract</h3>
 
     <p class="ex1">
