--- a/index.html
+++ b/index.html
@@ -3,29 +3,13 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <img src="WebBanner2023.png" alt="Banner" width="1200" height="300">
-
-    <h1><b>ENG0018 Computer laboratory 2025/26</b></h1>
-    <h2>Student URN: 6954012</h2>
-
-    <hr>
-
-    <h2 style="font-family:calibri;">
-        <b>Conference paper: The influence of the rising technological advances on modern-day fighter jets and their effects on their efficiency in modern combat fields</b>
-    </h2>
-
-    <hr>
-
-    <!-- TABLE OF CONTENTS INSERTED HERE -->
-    <h2>Table of Contents</h2>
-    <ul>
-        <li><a href="#Abstract">Abstract</a></li>
-    </ul>
-    <hr>
-    <!-- END OF TABLE OF CONTENTS -->
-
-    <!-- Styles -->
     <style>
+        body {
+            background-color:#FFFFFF;
+            margin-left:50px;
+            font-family: Arial, sans-serif;
+        }
+
         table {
             font-family: arial, sans-serif;
             border-collapse: collapse;
@@ -45,16 +29,31 @@
         p.ex1 {
             margin-left: 250px;
         }
-
-        .mySlides {
-            display: none;
-        }
     </style>
-
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 
-<body style="background-color:#FFFFFF;margin-left:50px;">
+<body>
+
+    <img src="WebBanner2023.png" alt="Banner" width="1200" height="300">
+
+    <h1><b>ENG0018 Computer laboratory 2025/26</b></h1>
+    <h2>Student URN: 6954012</h2>
+
+    <hr>
+
+    <h2 style="font-family:calibri;">
+        <b>Conference paper: The influence of the rising technological advances on modern-day fighter jets and their effects on their efficiency in modern combat fields</b>
+    </h2>
+
+    <hr>
+
+    <!-- TABLE OF CONTENTS (correct location) -->
+    <h2>Table of Contents</h2>
+    <ul>
+        <li><a href="#Abstract">Abstract</a></li>
+    </ul>
+    <hr>
+    <!-- END TOC -->
 
     <!-- ABSTRACT SECTION -->
     <h3 id="Abstract">Abstract</h3>
@@ -71,20 +70,13 @@ results obtained.
         <pre>
 “Active Learning (Angluin, 1988, Cohn et al., 1994) is a paradigm where a concept is learnt by an
 intelligent machine through the interaction of an oracle with the machine system, over a sequence of
-learning epochs. A distinctive component in an active system is the querying strategy, used to sample
-candidate training instances from a pool and evaluate them for informativeness, i.e., their potential
-to improve the classification model. Various strategies have been proposed including; Query by
-Committee (Seung et al., 1992), Monte Carlo estimation (Roy and McCallum, 2001), uncertainty
-sampling (Lewis and Gale, 1994) and version space reduction (margin sampling) (Tong and Koller,
-2001). Irrespective of how the most informative pattern instances are chosen at each epoch they are
-presented for labeling, to a machine (database) or human oracle that has knowledge of the class
-labels. After adding the newly labeled instances to the current training set, a revised model is
-subsequently induced. A goal of this process is to achieve an efficient, incremental advancement of
-learning at each epoch. The process is continued until some stopping criterion has been met, such as
-reaching a stage where information from the selected instances is contrary to the model, causing the
-classifier confidence to drop, as in Vlachos (2008).
+learning epochs...
         </pre>
     </p>
+
+</body>
+</html>
+
 
 </body>
 </html>
