--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <title>Conference Paper</title>
 
     <style>
         body {
@@ -29,11 +31,17 @@
         p.ex1 {
             margin-left: 250px;
         }
+
+        /* Optional hover for links in TOC */
+        .toc a:hover {
+            color: #0056b3;
+        }
     </style>
 </head>
 
 <body>
 
+    <!-- Banner and Title -->
     <img src="WebBanner2023.png" alt="Banner" width="1200" height="300">
 
     <h1><b>ENG0018 Computer laboratory 2025/26</b></h1>
@@ -47,13 +55,33 @@
 
     <hr>
 
-    <!-- TABLE OF CONTENTS (correct location) -->
-    <h2>Table of Contents</h2>
-    <ul>
-        <li><a href="#Abstract">Abstract</a></li>
-    </ul>
-    <hr>
-    <!-- END TOC -->
+    <!-- STYLED TABLE OF CONTENTS -->
+    <div class="toc" style="
+        width: 350px;
+        background: #f8f9fa;
+        border: 1px solid #dcdcdc;
+        border-radius: 12px;
+        padding: 20px 25px;
+        box-shadow: 0 4px 8px rgba(0,0,0,0.08);
+        margin-bottom: 30px;
+    ">
+        <h2 style="margin-top: 0; font-family: Calibri, sans-serif;">Table of Contents</h2>
+
+        <ul style="
+            list-style-type: none;
+            padding-left: 10px;
+            margin: 0;
+            font-size: 18px;
+            line-height: 1.7;
+        ">
+            <li>
+                <a href="#Abstract" style="text-decoration: none; color: #0078D7;">
+                    ➤ Abstract
+                </a>
+            </li>
+        </ul>
+    </div>
+    <!-- END TABLE OF CONTENTS -->
 
     <!-- ABSTRACT SECTION -->
     <h3 id="Abstract">Abstract</h3>
@@ -70,13 +98,13 @@ results obtained.
         <pre>
 “Active Learning (Angluin, 1988, Cohn et al., 1994) is a paradigm where a concept is learnt by an
 intelligent machine through the interaction of an oracle with the machine system, over a sequence of
-learning epochs...
-        </pre>
-    </p>
-
-</body>
-</html>
-
-
-</body>
-</html>
+learning epochs. A distinctive component in an active system is the querying strategy, used to sample
+candidate training instances from a pool and evaluate them for informativeness, i.e., their potential
+to improve the classification model. Various strategies have been proposed including; Query by
+Committee (Seung et al., 1992), Monte Carlo estimation (Roy and McCallum, 2001), uncertainty
+sampling (Lewis and Gale, 1994) and version space reduction (margin sampling) (Tong and Koller,
+2001). Irrespective of how the most informative pattern instances are chosen at each epoch they are
+presented for labeling, to a machine (database) or human oracle that has knowledge of the class
+labels. After adding the newly labeled instances to the current training set, a revised model is
+subsequently induced. A goal of this process is to achieve an efficient, incremental advancement of
+learning at each epoch. The process is conti
