--- a/index.html
+++ b/index.html
@@ -88,9 +88,14 @@
 
     <p class="ex1">
         <pre>
-This experiment investigates the relationship between the independent and dependent variables,
-highlighting the underlying physical principles and analysing the accuracy and reliability of the
-results obtained.
+A growing number of threats are arising globally, which means that we require better technological fighter
+jets with greater avionics and intelligence systems to combat these threats. This article aims to examine the
+influence of technological improvements and how they have had an influence on the combat field and the overall 
+impact and performance. This was investigated through a wide range of data, which was gathered to find the truest 
+answer to the hypothesis. In my study, one of the most important facts concluded was that from the first generation 
+of fighter jets, they had top speeds of 1,075km/h, but the newest generation of fighter jets can reach up to Mach 2.25. 
+Therefore, technological advancements have allowed for a greater improvement in these modern fighter jets, leading to 
+an overall greater efficiency.
         </pre>
     </p>
 
