--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
             margin-left: 250px;
         }
 
-        /* Optional hover for links in TOC */
         .toc a:hover {
             color: #0056b3;
         }
@@ -43,7 +42,6 @@
 
     <!-- Banner and Title -->
     <img src="WebBanner2023.png" alt="Banner" width="1200" height="300">
-
     <h1><b>ENG0018 Computer laboratory 2025/26</b></h1>
     <h2>Student URN: 6954012</h2>
 
@@ -66,7 +64,6 @@
         margin-bottom: 30px;
     ">
         <h2 style="margin-top: 0; font-family: Calibri, sans-serif;">Table of Contents</h2>
-
         <ul style="
             list-style-type: none;
             padding-left: 10px;
@@ -74,39 +71,95 @@
             font-size: 18px;
             line-height: 1.7;
         ">
-            <li>
-                <a href="#Abstract" style="text-decoration: none; color: #0078D7;">
-                    ➤ Abstract
-                </a>
-            </li>
+            <li><a href="#Abstract" style="text-decoration: none; color: #0078D7;">➤ Abstract</a></li>
+            <li><a href="#Introduction" style="text-decoration: none; color: #0078D7;">➤ Introduction</a></li>
+            <li><a href="#HistoricalProgression" style="text-decoration: none; color: #0078D7;">➤ Historical Progression</a></li>
+            <li><a href="#Aerodynamics" style="text-decoration: none; color: #0078D7;">➤ Aerodynamics and Lift-to-Drag Efficiency</a></li>
+            <li><a href="#Avionics" style="text-decoration: none; color: #0078D7;">➤ Avionics and Sensor Integration</a></li>
+            <li><a href="#Intelligence" style="text-decoration: none; color: #0078D7;">➤ Intelligence, Procurement, and Strategic Impacts</a></li>
+            <li><a href="#CostPerformance" style="text-decoration: none; color: #0078D7;">➤ Cost-Performance Trade-Offs</a></li>
+            <li><a href="#Conclusion" style="text-decoration: none; color: #0078D7;">➤ Conclusion</a></li>
+            <li><a href="#References" style="text-decoration: none; color: #0078D7;">➤ References</a></li>
         </ul>
     </div>
-    <!-- END TABLE OF CONTENTS -->
 
-    <!-- ABSTRACT SECTION -->
+    <!-- ABSTRACT -->
     <h3 id="Abstract">Abstract</h3>
-
     <p class="ex1">
         <pre>
-A growing number of threats are arising globally, which means that we require better technological fighter jets with greater avionics and intelligence systems to combat these 
-threats. This article aims to examine the influence of technological improvements and how they have had an influence on the combat field and the overall impact and performance. 
-This was investigated through a wide range of data, which was gathered to find the truest answer to the hypothesis. In my study, one of the most important facts concluded was 
-that from the first generation of fighter jets, they had top speeds of 1,075km/h, but the newest generation of fighter jets can reach up to Mach 2.25. Therefore, technological 
-advancements have allowed for a greater improvement in these modern fighter jets, leading to an overall greater efficiency.
+A growing number of threats are arising globally, which means that we require better technological fighter jets with greater avionics and intelligence systems to combat these threats. This article aims to examine the influence of technological improvements and how they have had an influence on the combat field and the overall impact and performance. This was investigated through a wide range of data, which was gathered to find the truest answer to the hypothesis. In my study, one of the most important facts concluded was that from the first generation of fighter jets, they had top speeds of 1,075km/h, but the newest generation of fighter jets can reach up to Mach 2.25. Therefore, technological advancements have allowed for a greater improvement in these modern fighter jets, leading to an overall greater efficiency.
         </pre>
     </p>
 
+    <!-- INTRODUCTION -->
+    <h3 id="Introduction">Introduction</h3>
     <p class="ex1">
         <pre>
-“Active Learning (Angluin, 1988, Cohn et al., 1994) is a paradigm where a concept is learnt by an
-intelligent machine through the interaction of an oracle with the machine system, over a sequence of
-learning epochs. A distinctive component in an active system is the querying strategy, used to sample
-candidate training instances from a pool and evaluate them for informativeness, i.e., their potential
-to improve the classification model. Various strategies have been proposed including; Query by
-Committee (Seung et al., 1992), Monte Carlo estimation (Roy and McCallum, 2001), uncertainty
-sampling (Lewis and Gale, 1994) and version space reduction (margin sampling) (Tong and Koller,
-2001). Irrespective of how the most informative pattern instances are chosen at each epoch they are
-presented for labeling, to a machine (database) or human oracle that has knowledge of the class
-labels. After adding the newly labeled instances to the current training set, a revised model is
-subsequently induced. A goal of this process is to achieve an efficient, incremental advancement of
-learning at each epoch. The process is conti
+The evolution of modern fighter jets is a key aspect of how the military has become better equipped for contemporary combat scenarios. From the initial concept and later design of subsonic aircraft during WWII to the modern fighters used today, there have been significant changes in aerodynamics, avionics, and systems. This has led to improved efficiency, enhanced strategies, and bolder ideas. From the start of the Cold War until now, it has greatly impacted the development of modern aircraft, influenced by the geographical locations of the U.S. and the Soviet Union. Additionally, it prompted a rapid increase in aircraft designs, improvements in avionics, and advancements in weaponry (Shklarsky, 2023; Verrier, 2023). 
+        </pre>
+    </p>
+
+    <!-- HISTORICAL PROGRESSION -->
+    <h3 id="HistoricalProgression">Historical Progression</h3>
+    <p class="ex1">
+        <pre>
+The overall development of a fighter jet can be placed into four distinct generations. The first-generation fighters, introduced from the early 1940s to the 1950s, were subsonic and featured straight wings. They also contained very limited avionics and had inferior weapon systems compared to the later generations. Main examples of first-generation jets include the iconic MiG-15 and F-86 Sabre, with their top speeds being approximately 1,075km/h and range of 500-600km (Shklarsky, 2023). These fighter jets had the purpose of being interceptors. They were the key stepping stone in transitioning from piston engines to jet propulsion.
+...
+        </pre>
+    </p>
+
+    <!-- AERODYNAMICS AND LIFT-TO-DRAG -->
+    <h3 id="Aerodynamics">Aerodynamics and Lift-to-Drag Efficiency</h3>
+    <p class="ex1">
+        <pre>
+Aerodynamic revolutions, such as the Leading-Edge Vortex Controller’s (LEVCONs), have been essential towards improving fighter jets’ efficiency in aerial combat. LEVCON was designed to manipulate airflow to generate controlled vortices around the wings, which enhanced the lift-to-drag ratio under heavily turbulent conditions under high-G manoeuvrability. When conducted under simulations, it was noted that it gave a 5-8% improvement in lift and a corresponding increase in power output in the variable airflow conditions (Shklarsky et al., 2025). The use of similar aerodynamic principles would be essential towards reducing fuel consumption and improving manoeuvrability during high-G turns.
+Other aerodynamic advances, including swept and delta-wing designs, have historically been crucial to enhancing supersonic stability. This can be seen in the third-generation fighters demonstrating a 15-20% increase in sustained manoeuvrability performance relative to previous generations, which aids to have extended engagement in dogfights and has better control of the skies (Shklarsky, 2023).
+        </pre>
+    </p>
+
+    <!-- AVIONICS AND SENSOR INTEGRATION -->
+    <h3 id="Avionics">Avionics and Sensor Integration</h3>
+    <p class="ex1">
+        <pre>
+Modern fighter jets heavily rely on advanced avionics and sensor systems to be mechanically ahead in contemporary environmental battles. The fourth-generation fighters utilise digital fly-by-wire controls, infrared search and tracking systems, as well as networked communication suites. Bongers (2014) found that avionic improvements had provided a 20-30% increase in mission success rates in simulated combat scenarios, which was directly linked to the enhanced situational awareness and target tracking accuracy. In addition to the integrated avionics, it helped reduce pilot payload. This can be seen through the sensor fusion, which allows for real-time display of threats from multiple angles, allowing for a rapid response to the threat. This effectiveness gain is crucial in contemporary environments where rapid decision-making can determine the course of the success of the mission (Shklarsky, 2023).
+        </pre>
+    </p>
+
+    <!-- INTELLIGENCE, PROCUREMENT, STRATEGIC IMPACTS -->
+    <h3 id="Intelligence">Intelligence, Procurement, and Strategic Impacts</h3>
+    <p class="ex1">
+        <pre>
+Technological innovations are closely linked to assessments and procurement practices. Early U.S. intelligence had overestimated the Soviet MiG-15 performance, predicting top speeds to exceed 1,200km/h and having ranges over 700km. However, this was untrue, and the actual speeds were 1,075km/h and a range of 500km (Verrier,2023). As a result of those misestimations, it promoted the U.S. development programs, increasing defence and expenditures and overall leading to greater technological development. It was also found that procurement strategies affected the efficiency. Lu (2020) used epsilon-based measures to evaluate the fighter jet acquisition. The study concluded that the optimised procurement could reduce overall acquisition time by 15-25%, which would help minimise cost overruns and increase mission readiness.
+        </pre>
+    </p>
+
+    <!-- COST-PERFORMANCE TRADE-OFFS -->
+    <h3 id="CostPerformance">Cost-Performance Trade-Offs</h3>
+    <p class="ex1">
+        <pre>
+Technological advancements come with the price of economic considerations. Bongers (2014) demonstrated that increasing the maximum speed from Mach 2.0 to Mach 2.25 and avionics complexity led to an overall increase in cost of 20-30%. These investments led to a yield of measurable improvements in the combat effectiveness and including an overall greater range as well as a higher payload capacity, and enhancing the survivability for the pilot. This is visible with the F-22’s payload capacity of 8,200kg and advanced stealth features, which give it the ability to extend missions in high-threat areas while also maintaining operational safety (Shklarsky, 2023).
+        </pre>
+    </p>
+
+    <!-- CONCLUSION -->
+    <h3 id="Conclusion">Conclusion</h3>
+    <p class="ex1">
+        <pre>
+Technological advances have had a profound impact on the efficiency of modern fighter jets in contemporary urban environments. Through historical progression from subsonic, radar-limited fighter jets to the high-tech, stealthy, sensor-integrated fighter jets used today, it demonstrates a clear path towards being fully effective during combat. From the combination of improvements in aerodynamics, avionic integration, and optimised procurement processes it helped to enhance the overall success of missions and the survivability of pilots. However, costs rise alongside technological improvement, the efficiency gains-measured in extended range, help improve payload management and reduce pilot workload and higher combat effectiveness, which aids in justifying large-scale investments.
+        </pre>
+    </p>
+
+    <!-- REFERENCES -->
+    <h3 id="References">References</h3>
+    <p class="ex1">
+        <pre>
+Bongers, A. (2014) ‘Technological change in U.S. jet fighter aircraft’, Research Policy, 43(5), pp. 913–925. Available at: https://doi.org/10.1016/j.respol.2014.02.003
+Lu, W.M. (2020) ‘Major weapons procurement: An efficiency-based evaluation of the procurement of fighter jets’, Managerial and Decision Economics, 41(8), pp. 1165–1178. Available at: https://doi.org/10.1002/mde.3121
+Shklarsky, I. (2023) ‘Driving innovation in air power: The Cold War’s four generations of fighter jets’, The Journal of Strategic Studies, 46(7), pp. 1025–1050. Available at: https://doi.org/10.1080/14751798.2023.2178071
+Verrier, M. (2023) ‘Overestimating Soviet airpower: U.S. intelligence assessments of Soviet jet fighters, 1945–1953’, Cold War History, 23(4), pp. 455–478. Available at: https://doi.org/10.1080/03071847.2023.2268733
+Shklarsky, I. et al. (2025) ‘Leading-edge vortex controller (LEVCON) influence on wind turbine performance’, Energies, 16(7590). Available at: https://www.mdpi.com/1996-1073/16/15/7590
+        </pre>
+    </p>
+
+</body>
+</html>
