--- a/index.html
+++ b/index.html
@@ -189,7 +189,8 @@ pilot workload and higher combat effectiveness, which aids in justifying large-s
     <h3 id="References">References</h3>
     <p class="ex1">
         <pre>
-Bongers, A. (2014) ‘Technological change in U.S. jet fighter aircraft’, Research Policy, 43(5), pp. 913–925. Available at: https://doi.org/10.1016/j.respol.2014.02.003
+Bongers, A. (2014) ‘Technological change in U.S. jet fighter aircraft’, Research Policy, 43(5), pp. 913–925. 
+Available at: https://doi.org/10.1016/j.respol.2014.02.003
             
 Lu, W.M. (2020) ‘Major weapons procurement: An efficiency-based evaluation of the procurement of fighter jets’, Managerial and Decision Economics, 41(8), pp. 1165–1178. 
 Available at: https://doi.org/10.1002/mde.3121
