--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@ of jets, which were able to reach supersonic speeds of 2,100 km/h. They develope
 use (Shklarsky, 2023). The third-generation fighters came about from around the 1970s to the late 1980s and were allowed to contain a variety of advanced avionics and fly-by-wire
 controls across a variety of roles in combat. Some notable fighter jets from this generation consisted of the F-15 Eagle, which had max speeds of 2,655 km/h and maximum ranges of 
 about 3,900 km (Shklarsky, 2023).
+
+             <img src="WebBanner2023.png" alt="Banner" width="600" height="150">
         </pre>
     </p>
 
