--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ use (Shklarsky, 2023). The third-generation fighters came about from around the 
 controls across a variety of roles in combat. Some notable fighter jets from this generation consisted of the F-15 Eagle, which had max speeds of 2,655 km/h and maximum ranges of 
 about 3,900 km (Shklarsky, 2023).
 
-             <img src="WebBanner2023.png" alt="Banner" width="600" height="150">
+             <img src="640x425-F-15A-Eagle-05.jpg.webp" alt="Banner" width="600" height="150">
         </pre>
     </p>
 
