--- a/index.html
+++ b/index.html
@@ -211,6 +211,9 @@ Available at: https://doi.org/10.1080/03071847.2023.2268733
             
 Shklarsky, I. et al. (2025) ‘Leading-edge vortex controller (LEVCON) influence on wind turbine performance’, Energies, 16(7590). 
 Available at: https://www.mdpi.com/1996-1073/16/15/7590
+
+Figure 1 :Pearl Harbor Aviation Museum (2013) ‘McDonnell Douglas F-15 Eagle’, Pearl Harbor Aviation Museum Blog, 10 July.
+Available at: https://www.pearlharboraviationmuseum.org/blog/mcdonnell-douglas-f-15-eagle/ (Accessed: 3 December 2025)
         </pre>
     </p>
     <!-- Last commit time display -->
