--- a/index.html
+++ b/index.html
@@ -139,6 +139,8 @@ Aerodynamic revolutions, such as the Leading-Edge Vortex Controller’s (LEVCONs
 to manipulate airflow to generate controlled vortices around the wings, which enhanced the lift-to-drag ratio under heavily turbulent conditions under high-G manoeuvrability. When
 conducted under simulations, it was noted that it gave a 5-8% improvement in lift and a corresponding increase in power output in the variable airflow conditions 
 (Shklarsky et al., 2025). The use of similar aerodynamic principles would be essential towards reducing fuel consumption and improving manoeuvrability during high-G turns.
+<img src="Vortex.png" alt="Banner" width="640" height="425">
+Figure 2: Demonstration of how vorticies on the Fighter Jet
 Other aerodynamic advances, including swept and delta-wing designs, have historically been crucial to enhancing supersonic stability. This can be seen in the third-generation 
 fighters demonstrating a 15-20% increase in sustained manoeuvrability performance relative to previous generations, which aids to have extended engagement in dogfights and has
 better control of the skies (Shklarsky, 2023).
