--- a/index.html
+++ b/index.html
@@ -286,8 +286,8 @@ Available at: https://www.pearlharboraviationmuseum.org/blog/mcdonnell-douglas-f
   // Function to calculate and display total word count from selected sections
   function displayTotalWordCount() {
     // Calculate word count for each section and accumulate the total
-    const IntroductionCount = displayWordCount("Introduction_InText");
-    const AnalysisCount = displayWordCount("Analysis_InText");
+    const IntroductionCount = displayWordCount("Introduction");
+    const AnalysisCount = displayWordCount("HistoricalProgression");
     // Calculate the sum of all selected sections
     const totalWordCount = IntroductionCount + AnalysisCount;
     // Display the total word count
