--- a/index.html
+++ b/index.html
@@ -265,36 +265,52 @@ Available at: https://www.pearlharboraviationmuseum.org/blog/mcdonnell-douglas-f
 </script>
 
 
- <!-- //////////////////////////////////////////////////////////////////////////////// -->
-  <!-- ////////////////////////////// Word count function ////////////////////////////// -->
-  <!-- //////////////////////////////////////////////////////////////////////////////// -->
-<!-- Placeholder for total word count -->
-<p id="totalWordCount"></p>
-<hr>
+<!-- //////////////////////////////////////////////////////////////////////////////// -->
+<!-- ////////////////////////////// Word Count System //////////////////////////////// -->
+<!-- //////////////////////////////////////////////////////////////////////////////// -->
+
+<p id="totalWordCount" style="font-weight:bold; font-size:18px;"></p>
+
+<button onclick="displayTotalWordCount()" 
+        style="padding: 8px 16px; margin-top: 10px;">
+    Update Word Count
+</button>
+
 <script>
-  // Function to calculate and display word count for a specified section
-  function displayWordCount(sectionId, outputId) {
-    // Get the text content from the specified section
-    const text = document.getElementById(sectionId).textContent;
-    // Split text into words based on spaces and filter out any empty strings
-    const wordArray = text.trim().split(/\s+/);
-    // Count the words
-    const wordCount = wordArray.length;
-    // Return the word count for summing purposes
-    return wordCount;
-  }
-  // Function to calculate and display total word count from selected sections
-  function displayTotalWordCount() {
-    // Calculate word count for each section and accumulate the total
-    const IntroductionCount = displayWordCount("Introduction");
-    const AnalysisCount = displayWordCount("HistoricalProgression");
-    // Calculate the sum of all selected sections
-    const totalWordCount = IntroductionCount + AnalysisCount;
-    // Display the total word count
-    document.getElementById("totalWordCount").innerText = `Total word count: ${totalWordCount}`;
-  }
-  // Run the function for specific sections and display total count when the page loads
-  window.onload = displayTotalWordCount;
+    function countWordsInSection(id) {
+        const element = document.getElementById(id);
+        if (!element) return 0;
+
+        const text = element.textContent || "";
+        const words = text.trim().split(/\s+/).filter(Boolean);
+        return words.length;
+    }
+
+    function displayTotalWordCount() {
+        const Abstract = countWordsInSection("Abstract_InText");
+        const Introduction = countWordsInSection("Introduction_InText");
+        const Historical = countWordsInSection("Historical_InText");
+        const Aerodynamics = countWordsInSection("Aerodynamics_InText");
+        const Avionics = countWordsInSection("Avionics_InText");
+        const CostPerformance = countWordsInSection("CostPerformance_InText");
+        const Conclusion = countWordsInSection("Conclusion_InText");
+
+        const total =
+            Abstract +
+            Introduction +
+            Historical +
+            Aerodynamics +
+            Avionics +
+            CostPerformance +
+            Conclusion;
+
+        document.getElementById("totalWordCount").innerText =
+            `Total Word Count (Selected Sections Only): ${total}`;
+    }
+
+    // Run automatically when the page loads
+    document.addEventListener("DOMContentLoaded", displayTotalWordCount);
 </script>
+
 </body>
 </html>
