--- a/index.html
+++ b/index.html
@@ -309,10 +309,10 @@ Available at: https://www.pearlharboraviationmuseum.org/blog/mcdonnell-douglas-f
         const Conclusion = countWordsInSection("Conclusion_InText");
 
         const total =
-            Abstract +
             Introduction +
             Historical +
             Aerodynamics +
+            Intelligence +
             Avionics +
             CostPerformance +
             Conclusion;
