--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>Conference Paper</title>
-
+<video src="" width = "800" height = "450" controls>
+</video>
     <style>
         body {
             background-color:#FFFFFF;
